--- a/gb/19/9/19/n11532043.md
+++ b/gb/19/9/19/n11532043.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/roz252/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/roz252/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/roz252/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/roz252/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/roz252/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/roz252/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/roz252/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/roz252/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/roz252/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/roz252/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/roz252/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/roz252/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/roz252/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>残忍谋杀“地震儿” 新州两嫌凶被擒</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2019年09月19日讯】（大纪元记者伊琏<ahref="https://github.com/roz252/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）19日，一男一女因涉嫌与8月底在新州发生的一起<ahref="https://github.com/roz252/djy/blob/master/gb/tag/%E8%B0%8B%E6%9D%80.md#1">谋杀</a>案有关，遭到警方逮捕。在这起凶杀案中，一名年轻女郎被人残忍杀害，并塑料布裹身被扔进麦觉理湖（Lake Macquarie）附近的一条河中。</p>
-<p>河中女尸被警方证实是29岁的当地女子伊西（Danielle Easey），因其出生时正巧赶上地震，被人称作“<ahref="https://github.com/roz252/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87%E5%84%BF.md#1">地震儿</a>”。伊西死前曾遭到暴打和刀捅。过去几周，警方一直在调查她的死因，已知伊西生前吸毒，且在麦觉理湖地区四处借宿。</p>
+<p>【大纪元2019年09月19日讯】（大纪元记者伊琏<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E6%BE%B3%E6%B4%B2.md#1">澳洲</a>悉尼编译报导）19日，一男一女因涉嫌与8月底在新州发生的一起<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%B0%8B%E6%9D%80.md#1">谋杀</a>案有关，遭到警方逮捕。在这起凶杀案中，一名年轻女郎被人残忍杀害，并塑料布裹身被扔进麦觉理湖（Lake Macquarie）附近的一条河中。</p>
+<p>河中女尸被警方证实是29岁的当地女子伊西（Danielle Easey），因其出生时正巧赶上地震，被人称作“<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%9C%B0%E9%9C%87%E5%84%BF.md#1">地震儿</a>”。伊西死前曾遭到暴打和刀捅。过去几周，警方一直在调查她的死因，已知伊西生前吸毒，且在麦觉理湖地区四处借宿。</p>
 <p>周四上午10点，麦觉理湖警方在卡迪夫（Cardiff）的一个工业场所，逮捕了一名33岁男子，并将其押送至贝尔蒙特（Belmont）警察局。一小时后，警方在霍姆斯维尔（Holmesville）的一所民宅逮捕了一名32岁女子，她被押往多伦多（Toronto）警察局。</p>
-<p>警方表示，上月底死亡的伊西死状“惨烈”，被<ahref="https://github.com/roz252/djy/blob/master/gb/tag/%E8%B0%8B%E6%9D%80.md#1">谋杀</a>时仍在拚命挣扎。警方正对两名嫌犯的被捕场所，以及纳拉拉（Narara）的一处住所展开搜查，一辆三菱德利卡（Mitsubishi Delica）汽车被警方扣押。</p>
+<p>警方表示，上月底死亡的伊西死状“惨烈”，被<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%B0%8B%E6%9D%80.md#1">谋杀</a>时仍在拚命挣扎。警方正对两名嫌犯的被捕场所，以及纳拉拉（Narara）的一处住所展开搜查，一辆三菱德利卡（Mitsubishi Delica）汽车被警方扣押。</p>
 <p>警方专案小组继续调查此案。</p>
 <p>**<br />
 责任编辑：李熔石</p>
@@ -17,42 +17,46 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/18/3/21/n10236131.md#1">澳洲女子被美警射杀案 其警被控三级谋杀</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/18/7/19/n10573705.md#1">澳男医院夺警枪射击 被控谋杀 幸无人伤亡</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/18/8/23/n10660335.md#1">澳大利亚新州男子烧伤致死案 又一男子被控谋杀</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/19/4/10/n11175702.md#1">涉嫌谋杀悉尼泰国男子 美国男将被引渡回澳</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/19/5/1/n11226270.md#1">美国警察射杀澳女案宣判 谋杀罪成立</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/19/7/25/n11408219.md#1">澳洲男子及女友在加拿大被谋杀案 取得进展</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/19/7/25/n11408453.md#1">澳联合国官员斐济遇害 丈夫重伤 疑为谋杀</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/19/8/8/n11438898.md#1">澳男谋杀案 加国凶嫌奔逃三周已丧身密林</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/19/8/13/n11450003.md#1">谋杀澳男案 两加拿大嫌凶被确认为自杀身亡</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/28/n12142815.md#1">悉尼Redfern火车站升级工程有望年底动工</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10236131.md#1">澳洲女子被美警射杀案 其警被控三级谋杀</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/7/19/n10573705.md#1">澳男医院夺警枪射击 被控谋杀 幸无人伤亡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/23/n10660335.md#1">澳大利亚新州男子烧伤致死案 又一男子被控谋杀</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/4/10/n11175702.md#1">涉嫌谋杀悉尼泰国男子 美国男将被引渡回澳</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/5/1/n11226270.md#1">美国警察射杀澳女案宣判 谋杀罪成立</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/25/n11408219.md#1">澳洲男子及女友在加拿大被谋杀案 取得进展</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/7/25/n11408453.md#1">澳联合国官员斐济遇害 丈夫重伤 疑为谋杀</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/8/8/n11438898.md#1">澳男谋杀案 加国凶嫌奔逃三周已丧身密林</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/8/13/n11450003.md#1">谋杀澳男案 两加拿大嫌凶被确认为自杀身亡</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753300.md#1">达顿任命前座议员 “金刚狼”成影子防长</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/29/n10435561.md#1" target="_blank">罗思义：一个到死还相信共产党伟大的“学者”</a></li><li><a href="https://github.com/roz252/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/3/17/n4664320.md#1" target="_blank">她在电话那头喊：感谢法轮功师父救了我！</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513103.md#1" target="_blank">唐铭：维权老兵需了解韩战的中国战俘刺青浪潮</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/5/n10617345.md#1" target="_blank">婆媳恩怨千千结 一本宝书解枷锁</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/25/n12136200.md#1">美中脱钩和对抗全面展开 五大战场激烈交锋</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138645.md#1">【内幕】病毒攻陷舒兰市公安局的过程</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138369.md#1">股王大立光撤出苏州 汇回台湾3亿多美金</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12136315.md#1">【最新疫情5·26】川普：本周将强硬回应中共</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138581.md#1">中共外交公文曝光 “台湾万岁”成推特热词</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/25/n12135738.md#1">唐绮阳预测下半年运势：选边站不容模糊以对</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12137500.md#1">影帝吴朋奉骤逝 法医鉴定死因为脑中风</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12138527.md#1">崔永元晒视频杠上胡锡进：千颗核弹头放你家</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/26/n12136657.md#1">影帝吴朋奉在家倒地猝逝 享年55岁</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/27/n12139391.md#1">黄秋生居家检疫出关 夸台湾防疫、想吃卤肉饭</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/20/n12123948.md#1">在瘟疫中救人的神仙</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/9/9/27/n2670522.md#1">古代教育：儒雅的大明朝文人（上）</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/19/12/26/n11746439.md#1">【医案】朝露人生去日苦多</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/12/4/7/n3559927.md#1">围棋别称中的故事</a></li>
-<li><a href="https://github.com/roz252/djy/blob/master/gb/20/5/20/n12122612.md#1">【传奇时代】芬兰“天籁之声” 唱出中国人权希望</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752388.md#1">【财商天下】美欧看上 台湾会脱孤？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/roz252/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/roz252/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/19/n11532043.htm">残忍谋杀“地震儿” 新州两嫌凶被擒</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/9/19/n11532043.htm">残忍谋杀“地震儿” 新州两嫌凶被擒</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/roz252/djy/blob/master/gb/19/9/19/n11532043.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/roz252/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/roz252/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/roz252/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/roz252/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roz252/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/19/9/19/n11532043.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
